--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,7 +42,7 @@
   --color-background: #F4F5F5;
   --color-foreground: #000;
 
-  --color-primary: #193EAF;
+  --color-primary: #0C2D48;
   --color-primary-foreground: #fff;
 
   --color-card: #FFF;
