--- a/src/storyblok/BannerCta.astro
+++ b/src/storyblok/BannerCta.astro
@@ -7,7 +7,7 @@ const { blok } = Astro.props
 <section {
   ...storyblokEditable(blok)}
   class="bg-no-repeat bg-cover bg-center"
-  style={`background-image: ${blok.image.filename ? `url('${blok.image.filename}/m/1440x0/filters:quality(90)')` : ''}`}
+  style={`background-image: ${blok.image?.filename ? (blok.image.filename.includes('storyblok.com') ? `url('${blok.image.filename}/m/1440x0/filters:quality(90)')` : `url('${blok.image.filename}')`) : ''}`}
   >
 
   <div class="container mx-auto flex flex-col justify-between items-start min-h-[80vh] py-16 px-6">
